--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -239,7 +239,7 @@ str(instacart)
     ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
     ##   ..- attr(*, "class")= chr "col_spec"
 
-This is a 1384617 rows \* 15 cols dataset which indicates the information of costomers order details and their products`details.  The key variables include days_since_prior_order(int), aisle_id(int), department_id(int) and so on. For example,in var 'days_since_prior_order', each value means the gap days from this costomer`s last order to this one. The var 'department\_id' shows which departments each product belong to, which can be studied to explore which departments is most sold.
+This is a 1384617 rows \* 15 cols dataset which indicates the information of costomers order details and their products details. The key variables include days\_since\_prior\_order(int), aisle\_id(int), department\_id(int) and so on. For example,in var 'days\_since\_prior\_order', each value means the gap days from this costomers last order to this one. The var 'department\_id' shows which departments each product belong to, which can be studied to explore which departments is most sold.
 
 ``` r
 #how many aisles are there, and which aisles are the most items ordered from?
